# OpenCVDisparityTuner

./: CMakeLists.txt  OpenCVDisparityTuner.cxx  OpenCVDisparityTuner.h  OpenCVDisparityTuner.ui  README.md  cqtopencvviewergl.cxx  cqtopencvviewergl.h  main.cxx
CMake/: DeployQt5.cmake
